--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <div class="container-socialMedia">
                 <i class="fab fa-youtube"></i>
-                <i class="fab fa-instagram"></i>
+                <i class="fab fa-instagram">https://www.instagram.com/_iamrobinson_n/</i>
                 <i class="fab fa-twitter"></i>
             </div>
         </header>
