--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <div class="container-socialMedia">
                 <i class="fab fa-youtube"></i>
-                <i class="fab fa-instagram"><a href="">https://www.instagram.com/_iamrobinson_n/</a></i>
+                <i class="fab fa-instagram"  href="https://www.instagram.com/_iamrobinson_n"></i>
                 <i class="fab fa-twitter"></i>
             </div>
         </header>
