--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             </div>
             <div class="container-socialMedia">
                 <i class="fab fa-youtube"></i>
-                <i class="fab fa-instagram"  href="https://www.instagram.com/_iamrobinson_n"></i>
+                 <a href="https://www.instagram.com/_iamrobinson_n"> 
+                    <i class="fab fa-instagram" ></i></a>
                 <i class="fab fa-twitter"></i>
             </div>
         </header>
